[gd_scene load_steps=12 format=3 uid="uid://c3iyygqly2ifv"]

[ext_resource type="Texture2D" uid="uid://50r516c1u5lb" path="res://textures/TCom_Sand_Muddy2_2x2_512_albedo.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://dqqprr0ave5pu" path="res://main.gd" id="1_kek77"]
[ext_resource type="PackedScene" uid="uid://bvalrrwlp6wm" path="res://player.tscn" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://c01ofxgvfomno" path="res://textures/aim.png" id="11_dg77c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(0.998535, 0.522106, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_texture = ExtResource("1_0xm2m")
uv1_scale = Vector3(25, 25, 25)

[sub_resource type="PlaneMesh" id="PlaneMesh_h2yge"]

[sub_resource type="Theme" id="Theme_272bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.207843, 0.709804, 0.027451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycdy4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg77c"]
bg_color = Color(0.372549, 0.8, 0.164706, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_kek77")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(15, 0, 0, 0, 1, 0, 0, 0, 15, 0, 0, 0)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(40, 0, 0, 0, 1, 0, 0, 0, 40, 0.0292969, -0.238947, 0)
shape = SubResource("BoxShape3D_0xm2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ig7tw")
mesh = SubResource("PlaneMesh_h2yge")

[node name="Player" parent="." instance=ExtResource("3_1bvp3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0852192, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.384875, 0.922969, 0, -0.922969, -0.384875, -3.60428, 19.8844, 21.4381)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HealthBarContainer" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="HUD/HealthBarContainer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_right = 200.0
grow_vertical = 0
theme = SubResource("Theme_272bh")
theme_override_styles/fill = SubResource("StyleBoxFlat_5vw27")

[node name="AmmoLabel" type="Label" parent="HUD/HealthBarContainer"]
layout_mode = 0
offset_left = 22.0
offset_top = 584.0
offset_right = 65.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 40
text = "30/30"

[node name="Crosshair" type="TextureRect" parent="HUD/HealthBarContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.802
anchor_bottom = 16.197
offset_left = 568.0
offset_top = 328.0
offset_right = -544.08
offset_bottom = -279.88
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_dg77c")
expand_mode = 1

[node name="ReloadBar" type="ProgressBar" parent="HUD/HealthBarContainer"]
visible = false
layout_mode = 0
offset_left = 496.0
offset_top = 584.0
offset_right = 656.0
offset_bottom = 611.0
theme_override_styles/background = SubResource("StyleBoxFlat_ycdy4")
theme_override_styles/fill = SubResource("StyleBoxFlat_dg77c")
max_value = 2.0
show_percentage = false

[node name="EnemyCountLabel" type="Label" parent="HUD/HealthBarContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.028
anchor_bottom = 0.025
offset_left = 1040.0
offset_top = 8.0
offset_right = 1121.88
offset_bottom = 30.0
text = "Enemies: 0"

[node name="HealBorder" type="Control" parent="HUD"]
modulate = Color(0.0411971, 0.576316, 0.0334921, 1)
layout_mode = 3
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.064
offset_top = -7.776
offset_right = -1112.0
offset_bottom = -608.0

[node name="Top" type="ColorRect" parent="HUD/HealBorder"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1112.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bottom" type="ColorRect" parent="HUD/HealBorder"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 640.0
offset_right = 1112.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="ColorRect" parent="HUD/HealBorder"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 15.8
offset_right = -12.0
offset_bottom = 7.99994
grow_horizontal = 2
grow_vertical = 2

[node name="Right" type="ColorRect" parent="HUD/HealBorder"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1144.0
offset_right = 1112.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="Level" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Level"]
transform = Transform3D(1.00101, 0, 0, 0, 11.815, 0, 0, 0, 33.2423, -285.912, 5.99796, -4.03726)
size = Vector3(1, 2.02391, 2.12262)
